Home page completed

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,19 @@
       "name": "Serdich",
       "path": "",
       "files": {
+        "38486559": {
+          "id": "38486559",
+          "path": "images/tkani.jpg",
+          "output": "images/tkani.jpg",
+          "name": "tkani.jpg",
+          "category": "IMAGE",
+          "size": 409149,
+          "type": "jpg",
+          "initialSize": 409149,
+          "optimized": false,
+          "height": 800,
+          "width": 566
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -1121,22 +1134,6 @@
           "parents": [],
           "type": "css"
         },
-        "02386add": {
-          "id": "02386add",
-          "path": "stylesheets/style.css",
-          "output": "stylesheets/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "eccf039d": {
           "id": "eccf039d",
           "path": "js/wow.min.js",
@@ -1230,6 +1227,251 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "5ebcdd77": {
+          "id": "5ebcdd77",
+          "path": "images/karniz.jpg",
+          "output": "images/karniz.jpg",
+          "name": "karniz.jpg",
+          "category": "IMAGE",
+          "size": 343406,
+          "type": "jpg",
+          "initialSize": 343406,
+          "optimized": false,
+          "height": 1053,
+          "width": 799
+        },
+        "732960d5": {
+          "id": "732960d5",
+          "path": "images/sunprotection.jpg",
+          "output": "images/sunprotection.jpg",
+          "name": "sunprotection.jpg",
+          "category": "IMAGE",
+          "size": 50595,
+          "type": "jpg",
+          "initialSize": 50595,
+          "optimized": false,
+          "height": 449,
+          "width": 550
+        },
+        "db05ee32": {
+          "id": "db05ee32",
+          "path": "images/shtoru.jpg",
+          "output": "images/shtoru.jpg",
+          "name": "shtoru.jpg",
+          "category": "IMAGE",
+          "size": 137352,
+          "type": "jpg",
+          "initialSize": 137352,
+          "optimized": false,
+          "height": 853,
+          "width": 847
+        },
+        "7d2dc233": {
+          "id": "7d2dc233",
+          "path": "images/ovca.jpg",
+          "output": "images/ovca.jpg",
+          "name": "ovca.jpg",
+          "category": "IMAGE",
+          "size": 1048675,
+          "type": "jpg",
+          "initialSize": 1048675,
+          "optimized": false,
+          "height": 2139,
+          "width": 2208
+        },
+        "a6c35596": {
+          "id": "a6c35596",
+          "path": "images/shtoru2.jpg",
+          "output": "images/shtoru2.jpg",
+          "name": "shtoru2.jpg",
+          "category": "IMAGE",
+          "size": 255992,
+          "type": "jpg",
+          "initialSize": 255992,
+          "optimized": false,
+          "height": 600,
+          "width": 480
+        },
+        "3520ca5a": {
+          "id": "3520ca5a",
+          "path": "images/textile.jpg",
+          "output": "images/textile.jpg",
+          "name": "textile.jpg",
+          "category": "IMAGE",
+          "size": 235774,
+          "type": "jpg",
+          "initialSize": 235774,
+          "optimized": false,
+          "height": 850,
+          "width": 638
+        },
+        "35ef8596": {
+          "id": "35ef8596",
+          "path": "images/misc.jpg",
+          "output": "images/misc.jpg",
+          "name": "misc.jpg",
+          "category": "IMAGE",
+          "size": 2068519,
+          "type": "jpg",
+          "initialSize": 2068519,
+          "optimized": false,
+          "height": 2301,
+          "width": 2539
+        },
+        "8b0876d6": {
+          "id": "8b0876d6",
+          "path": "images/textile2.jpg",
+          "output": "images/textile2.jpg",
+          "name": "textile2.jpg",
+          "category": "IMAGE",
+          "size": 140072,
+          "type": "jpg",
+          "initialSize": 140072,
+          "optimized": false,
+          "height": 700,
+          "width": 525
+        },
+        "4b5c0e88": {
+          "id": "4b5c0e88",
+          "path": "portfolio.jade",
+          "output": "portfolio.html",
+          "name": "portfolio.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "3992f744": {
+          "id": "3992f744",
+          "path": "portfolio.html",
+          "output": "portfolio.html",
+          "name": "portfolio.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e7ae14d4": {
+          "id": "e7ae14d4",
+          "path": "images/bg_pattern.jpg",
+          "output": "images/bg_pattern.jpg",
+          "name": "bg_pattern.jpg",
+          "category": "IMAGE",
+          "size": 66808,
+          "type": "jpg",
+          "initialSize": 66808,
+          "optimized": false,
+          "height": 240,
+          "width": 320
+        },
+        "6ab72e6c": {
+          "id": "6ab72e6c",
+          "path": "images/Logotype.png",
+          "output": "images/Logotype.png",
+          "name": "Logotype.png",
+          "category": "IMAGE",
+          "size": 16579,
+          "type": "png",
+          "initialSize": 16579,
+          "optimized": false,
+          "height": 119,
+          "width": 1007
+        },
+        "567bd8f7": {
+          "id": "567bd8f7",
+          "path": "images/Logo_shadow.png",
+          "output": "images/Logo_shadow.png",
+          "name": "Logo_shadow.png",
+          "category": "IMAGE",
+          "size": 298936,
+          "type": "png",
+          "initialSize": 298936,
+          "optimized": false,
+          "height": 1117,
+          "width": 1116
+        },
+        "8492984b": {
+          "id": "8492984b",
+          "path": "images/bg5.jpg",
+          "output": "images/bg5.jpg",
+          "name": "bg5.jpg",
+          "category": "IMAGE",
+          "size": 1534188,
+          "type": "jpg",
+          "initialSize": 1534188,
+          "optimized": false,
+          "height": 1219,
+          "width": 1920
+        },
+        "534819e1": {
+          "id": "534819e1",
+          "path": "images/bg6.jpg",
+          "output": "images/bg6.jpg",
+          "name": "bg6.jpg",
+          "category": "IMAGE",
+          "size": 6958537,
+          "type": "jpg",
+          "initialSize": 6958537,
+          "optimized": false,
+          "height": 3648,
+          "width": 5472
+        },
+        "0b6d187d": {
+          "id": "0b6d187d",
+          "path": "images/bg7.jpg",
+          "output": "images/bg7.jpg",
+          "name": "bg7.jpg",
+          "category": "IMAGE",
+          "size": 5876412,
+          "type": "jpg",
+          "initialSize": 5876412,
+          "optimized": false,
+          "height": 3648,
+          "width": 5472
+        },
+        "763628b5": {
+          "id": "763628b5",
+          "path": "images/bg8.jpg",
+          "output": "images/bg8.jpg",
+          "name": "bg8.jpg",
+          "category": "IMAGE",
+          "size": 352184,
+          "type": "jpg",
+          "initialSize": 352184,
+          "optimized": false,
+          "height": 720,
+          "width": 1280
+        },
+        "7e60469a": {
+          "id": "7e60469a",
+          "path": "images/bg10.jpg",
+          "output": "images/bg10.jpg",
+          "name": "bg10.jpg",
+          "category": "IMAGE",
+          "size": 467756,
+          "type": "jpg",
+          "initialSize": 467756,
+          "optimized": false,
+          "height": 720,
+          "width": 1280
+        },
+        "82acac7f": {
+          "id": "82acac7f",
+          "path": "images/bg9.jpg",
+          "output": "images/bg9.jpg",
+          "name": "bg9.jpg",
+          "category": "IMAGE",
+          "size": 562684,
+          "type": "jpg",
+          "initialSize": 562684,
+          "optimized": false,
+          "height": 720,
+          "width": 1280
         }
       },
       "deploymentHistory": {},
