--- a/prepros.cfg
+++ b/prepros.cfg
@@ -48,6 +48,19 @@
           "height": 600,
           "width": 543
         },
+        "95927026": {
+          "id": "95927026",
+          "path": "images/gallery/misc/m5.jpg",
+          "output": "images/gallery/misc/m5.jpg",
+          "name": "m5.jpg",
+          "category": "IMAGE",
+          "size": 77756,
+          "type": "jpg",
+          "initialSize": 77756,
+          "optimized": false,
+          "height": 600,
+          "width": 450
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -1567,19 +1580,6 @@
           "height": 600,
           "width": 402
         },
-        "b5b753e3": {
-          "id": "b5b753e3",
-          "path": "images/gallery/livingRoom/l7.jpg",
-          "output": "images/gallery/livingRoom/l7.jpg",
-          "name": "l7.jpg",
-          "category": "IMAGE",
-          "size": 120232,
-          "type": "jpg",
-          "initialSize": 120232,
-          "optimized": false,
-          "height": 600,
-          "width": 783
-        },
         "c3099ae6": {
           "id": "c3099ae6",
           "path": "images/gallery/livingRoom/l8.jpg",
@@ -2008,6 +2008,240 @@
           "optimized": false,
           "height": 600,
           "width": 500
+        },
+        "88dbc575": {
+          "id": "88dbc575",
+          "path": "images/gallery/misc/m1.jpg",
+          "output": "images/gallery/misc/m1.jpg",
+          "name": "m1.jpg",
+          "category": "IMAGE",
+          "size": 102774,
+          "type": "jpg",
+          "initialSize": 102774,
+          "optimized": false,
+          "height": 596,
+          "width": 800
+        },
+        "ccaf849e": {
+          "id": "ccaf849e",
+          "path": "images/gallery/misc/m2.jpg",
+          "output": "images/gallery/misc/m2.jpg",
+          "name": "m2.jpg",
+          "category": "IMAGE",
+          "size": 70233,
+          "type": "jpg",
+          "initialSize": 70233,
+          "optimized": false,
+          "height": 600,
+          "width": 379
+        },
+        "a868e365": {
+          "id": "a868e365",
+          "path": "images/gallery/misc/m3.jpg",
+          "output": "images/gallery/misc/m3.jpg",
+          "name": "m3.jpg",
+          "category": "IMAGE",
+          "size": 74882,
+          "type": "jpg",
+          "initialSize": 74882,
+          "optimized": false,
+          "height": 600,
+          "width": 450
+        },
+        "067f56f3": {
+          "id": "067f56f3",
+          "path": "images/gallery/misc/m4.jpg",
+          "output": "images/gallery/misc/m4.jpg",
+          "name": "m4.jpg",
+          "category": "IMAGE",
+          "size": 106523,
+          "type": "jpg",
+          "initialSize": 106523,
+          "optimized": false,
+          "height": 600,
+          "width": 800
+        },
+        "6b9bb29b": {
+          "id": "6b9bb29b",
+          "path": "images/gallery/misc/m6.jpg",
+          "output": "images/gallery/misc/m6.jpg",
+          "name": "m6.jpg",
+          "category": "IMAGE",
+          "size": 50813,
+          "type": "jpg",
+          "initialSize": 50813,
+          "optimized": false,
+          "height": 600,
+          "width": 402
+        },
+        "e0f37aa3": {
+          "id": "e0f37aa3",
+          "path": "images/gallery/misc/m7.jpg",
+          "output": "images/gallery/misc/m7.jpg",
+          "name": "m7.jpg",
+          "category": "IMAGE",
+          "size": 63144,
+          "type": "jpg",
+          "initialSize": 63144,
+          "optimized": false,
+          "height": 600,
+          "width": 399
+        },
+        "cc2241bb": {
+          "id": "cc2241bb",
+          "path": "images/gallery/misc/m8.jpg",
+          "output": "images/gallery/misc/m8.jpg",
+          "name": "m8.jpg",
+          "category": "IMAGE",
+          "size": 147254,
+          "type": "jpg",
+          "initialSize": 147254,
+          "optimized": false,
+          "height": 600,
+          "width": 800
+        },
+        "5d276bfc": {
+          "id": "5d276bfc",
+          "path": "images/gallery/misc/m9.jpg",
+          "output": "images/gallery/misc/m9.jpg",
+          "name": "m9.jpg",
+          "category": "IMAGE",
+          "size": 67584,
+          "type": "jpg",
+          "initialSize": 67584,
+          "optimized": false,
+          "height": 600,
+          "width": 450
+        },
+        "3a0f6682": {
+          "id": "3a0f6682",
+          "path": "images/gallery/misc/m10.jpg",
+          "output": "images/gallery/misc/m10.jpg",
+          "name": "m10.jpg",
+          "category": "IMAGE",
+          "size": 57390,
+          "type": "jpg",
+          "initialSize": 57390,
+          "optimized": false,
+          "height": 600,
+          "width": 450
+        },
+        "486d5cdd": {
+          "id": "486d5cdd",
+          "path": "images/gallery/misc/m0.JPG",
+          "output": "images/gallery/misc/m0.JPG",
+          "name": "m0.JPG",
+          "category": "IMAGE",
+          "size": 2957512,
+          "type": "jpg",
+          "initialSize": 2957512,
+          "optimized": false,
+          "height": 2416,
+          "width": 4288
+        },
+        "23de09e6": {
+          "id": "23de09e6",
+          "path": "images/gallery/cabinet/c1.jpg",
+          "output": "images/gallery/cabinet/c1.jpg",
+          "name": "c1.jpg",
+          "category": "IMAGE",
+          "size": 1552040,
+          "type": "jpg",
+          "initialSize": 1552040,
+          "optimized": false,
+          "height": 2412,
+          "width": 2970
+        },
+        "17df0398": {
+          "id": "17df0398",
+          "path": "images/gallery/cabinet/c2.jpg",
+          "output": "images/gallery/cabinet/c2.jpg",
+          "name": "c2.jpg",
+          "category": "IMAGE",
+          "size": 1721789,
+          "type": "jpg",
+          "initialSize": 1721789,
+          "optimized": false,
+          "height": 3718,
+          "width": 2412
+        },
+        "21de5d57": {
+          "id": "21de5d57",
+          "path": "images/gallery/cabinet/c3.jpg",
+          "output": "images/gallery/cabinet/c3.jpg",
+          "name": "c3.jpg",
+          "category": "IMAGE",
+          "size": 1791106,
+          "type": "jpg",
+          "initialSize": 1791106,
+          "optimized": false,
+          "height": 3699,
+          "width": 2412
+        },
+        "63d1cd4e": {
+          "id": "63d1cd4e",
+          "path": "images/gallery/cabinet/c4.jpg",
+          "output": "images/gallery/cabinet/c4.jpg",
+          "name": "c4.jpg",
+          "category": "IMAGE",
+          "size": 81769,
+          "type": "jpg",
+          "initialSize": 81769,
+          "optimized": false,
+          "height": 600,
+          "width": 450
+        },
+        "b04c0187": {
+          "id": "b04c0187",
+          "path": "images/gallery/cabinet/c5.jpg",
+          "output": "images/gallery/cabinet/c5.jpg",
+          "name": "c5.jpg",
+          "category": "IMAGE",
+          "size": 75269,
+          "type": "jpg",
+          "initialSize": 75269,
+          "optimized": false,
+          "height": 600,
+          "width": 450
+        },
+        "42e41b47": {
+          "id": "42e41b47",
+          "path": "images/gallery/cabinet/c6.jpg",
+          "output": "images/gallery/cabinet/c6.jpg",
+          "name": "c6.jpg",
+          "category": "IMAGE",
+          "size": 56817,
+          "type": "jpg",
+          "initialSize": 56817,
+          "optimized": false,
+          "height": 600,
+          "width": 346
+        },
+        "1a5b19bf": {
+          "id": "1a5b19bf",
+          "path": "images/gallery/cabinet/c7.jpg",
+          "output": "images/gallery/cabinet/c7.jpg",
+          "name": "c7.jpg",
+          "category": "IMAGE",
+          "size": 66866,
+          "type": "jpg",
+          "initialSize": 66866,
+          "optimized": false,
+          "height": 600,
+          "width": 450
+        },
+        "884df553": {
+          "id": "884df553",
+          "path": "images/bg_pattern2.jpg",
+          "output": "images/bg_pattern2.jpg",
+          "name": "bg_pattern2.jpg",
+          "category": "IMAGE",
+          "size": 9241,
+          "type": "jpg",
+          "initialSize": 9241,
+          "optimized": false,
+          "height": 128,
+          "width": 128
         }
       },
       "deploymentHistory": {},
